--- a/config/terminator/config
+++ b/config/terminator/config
@@ -4,12 +4,14 @@
 [keybindings]
 [profiles]
   [[default]]
-    background_darkness = 0.8
+    background_color = "#002b36"
+    background_darkness = 0.9
     background_type = transparent
     cursor_color = "#aaaaaa"
-    foreground_color = "#00ff00"
+    foreground_color = "#839496"
     show_titlebar = False
     scrollbar_position = hidden
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
 [layouts]
   [[default]]
     [[[window0]]]
